[Fix - LoginComponent] Style ssoLogin btn

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -238,3 +238,10 @@
   font-family: monospace;
   margin-bottom: 5px;
 }
+
+.sso-btn {
+  background-color: white;
+  border: 2px #106DB6 solid;
+  color: #106DB6;
+  font-weight: bold;
+}
