--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -115,8 +115,8 @@
               </div>
 
               <div class="form-group sub-login">
-                <button class="btn btn-lg btn-block" style="background-color: #ed1c24;" (click)="loginSSO()">
-                  {{ "Đăng nhập SSO" | translate }}
+                <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
+                  {{ "btn.sso.login" | translate }}
                 </button>
               </div>
 
@@ -248,8 +248,8 @@
             </div>
 
             <div class="form-group sub-login">
-              <button class="btn btn-lg btn-block" style="background-color: #ed1c24;" (click)="loginSSO()">
-                {{ "Đăng nhập SSO" | translate }}
+              <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
+                {{ "btn.sso.login" | translate }}
               </button>
             </div>
 
