--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -170,7 +170,7 @@ input[type="checkbox"] {
     background: #F3F6FA;
     border: 1px solid #67B6F4;
     border-radius: 5px;
-    width: 229px;
+    width: 100%;
     height: 33px;
     // margin-right: 87%;
     text-align: center;
@@ -219,4 +219,10 @@ input[type="checkbox"] {
 .invalid {
   color: red;
 }
+
+.save-btn {
+    padding-top: 20px;
+    float: right;
+}
+
   
