--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -114,11 +114,11 @@
                 </button>
               </div>
 
-              <div class="form-group sub-login">
+              <!-- <div class="form-group sub-login">
                 <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
                   {{ "btn.sso.login" | translate }}
                 </button>
-              </div>
+              </div> -->
 
               <!-- <div class="form-group sign-up">
                 <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
@@ -127,6 +127,23 @@
                 >
               </div> -->
             </form>
+            <div class="form-signin">
+              <div class="form-group">
+                <p class="login_methods__title">
+                  <span>
+                    {{ 'login.method.title' | translate }}
+                  </span>
+                </p>
+                <div class="login_methods__list">
+                  <div class="login-methods__item" (click)="loginSSO()">
+                    <span class="login-methods__icon">
+                      <img src="../../assets/img/login_method_sso.svg">
+                    </span>
+                    SSO
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -247,11 +264,11 @@
               </button>
             </div>
 
-            <div class="form-group sub-login">
+            <!-- <div class="form-group sub-login">
               <button class="btn btn-lg btn-block sso-btn" (click)="loginSSO()">
                 {{ "btn.sso.login" | translate }}
               </button>
-            </div>
+            </div> -->
 
             <!-- <div class="form-group sign-up">
               <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
