[Update - accountLinkDialog] Cập nhật giao diện mới theo design

--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -125,9 +125,9 @@ h3{
   }
 }
 
-::ng-deep #toast-container > div {
-  width: 490px;
-}
+// ::ng-deep #toast-container > div {
+//   width: 490px !important;
+// }
 
 ::ng-deep {
   .mat-dialog-container {
