[Update - LoginComponent] Enable chức năng quên mật khẩu, fix width của thông báo toastService

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -96,11 +96,11 @@
                 </div>
               </div>
 
-              <!-- <div *ngIf="this.type != 1" class="form-group forgot-password">
+              <div *ngIf="this.type != 1" class="form-group forgot-password">
                 <a href="/forgot-password" 
                   >{{ "login.forgot_password" | translate }}?</a
                 >
-              </div> -->
+              </div>
 
               <div class="form-group">
                 <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
@@ -246,11 +246,11 @@
               </div>
             </div>
 
-            <!-- <div class="form-group forgot-password">
+            <div class="form-group forgot-password">
               <a href="/forgot-password"
                 >{{ "login.forgot_password" | translate }}?
               </a>
-            </div> -->
+            </div>
 
             <div class="form-group">
               <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
