--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,5 +117,9 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
   color: #3085d6 !important;
 }
 
+::ng-deep #toast-container > div {
+  max-width: 490px !important;
+}
+
 
 
