--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,11 +10,88 @@
         <h3>{{title | translate}}</h3>
       </div>
       <div *ngIf="getShowHideSideBar()">
+        <div ngbDropdown class="d-inline-block">
+          <div class="social-icons" ngbDropdownToggle>
+            <span class="user_login"></span>
+            <div style="display: flex; flex-direction: column;">
+              <div class="label">Ông/ Bà {{nameCurrentUser}}</div>
+              <div class="label">{{phoneCurrentUser}}</div>
+            </div>
+            <div>
+              <img style="width: 25px; height: 25px;" src="../../assets/img/arrow-down.svg"/>
+            </div>
+          </div>
+
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu" style="cursor: pointer">
+            <a ngbDropdownItem class="drop" (click)="infoUserDetail()" [routerLink]="['/main/user-infor']">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_user_detail"></div>
+                </div>
+                <div>{{'user.information' | translate }}</div>
+              </div>
+            </a>
+
+            <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop" (click)="resetPassword()">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_password"></div>
+                </div>
+                <div>{{'login.reset_password_new' | translate }}
+                  <a href="https://auth-sso.mobifone.vn/vn/profile-information" ></a
+                >
+                </div>
+              </div>
+            </button>
+
+            <!-- <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_password"></div>
+                </div>
+                <div>
+                  <a href="https://auth-sso.mobifone.vn/vn/profile-information" 
+                  >{{'login.reset_password_new' | translate }}</a>
+                </div>
+              </div>
+            </button> -->
+            
+            <button ngbDropdownItem class="drop" (click)="viewLink()">
+              <a style="color: inherit; text-decoration: none;" href="https://drive.google.com/drive/folders/1NHaCYOMCMsLvrw1uPbX2ezsC-Uo9huW3">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_document_use"></div>
+                </div>
+                <div>{{'document.user.use' | translate }}</div></div>
+              </a>
+            </button>
+
+            <button ngbDropdownItem class="drop">
+              <a href="/assets/upload/mobi_token_sign_setup.zip" style="color: inherit; text-decoration: none;">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_document_use"></div>
+                </div>
+                <div>{{'document.plugin.pki' | translate }}</div></div>
+              </a>
+            </button>
+            
+            <button ngbDropdownItem class="drop_red" routerLink="/login" (click)="logout()">
+              <div style="display: flex; align-items: center;">
+                <div class="db_user">
+                  <div class="db_log_out"></div>
+                </div>
+                <div>{{'logout' | translate }}</div>
+              </div>
+            </button>
+          </div>
+        </div>
+        
         <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle (click)="loadDataNotification()">
             <i *ngIf="numberNotification == 0" class="pi pi-bell p-mr-4 p-text-secondary"></i>
             <i *ngIf="numberNotification > 0" class="pi pi-bell p-mr-4 p-text-secondary" pBadge value="{{numberNotification}}"></i>
-            <div class="label">{{'notification' | translate }}</div>
+            <!-- <div class="label">{{'notification' | translate }}</div> -->
           </div>
 
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu" style="width: 500px;overflow: hidden auto;max-height: 315px;">
@@ -70,82 +147,15 @@
         <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle>
               <span class="document"></span>
-              <div class="label">{{'document' | translate }}</div>
+              <!-- <div class="label">{{'document' | translate }}</div> -->
           </div>
 
-          <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
-            <button ngbDropdownItem class="drop" (click)="viewLink()">
-              <a style="color: inherit; text-decoration: none;" href="https://drive.google.com/drive/folders/1NHaCYOMCMsLvrw1uPbX2ezsC-Uo9huW3">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_document_use"></div>
-                </div>
-                <div>{{'document.user.use' | translate }}</div></div>
-              </a>
-            </button>
+          <!-- <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
 
-            <button ngbDropdownItem class="drop">
-              <a href="/assets/upload/mobi_token_sign_setup.zip" style="color: inherit; text-decoration: none;">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_document_use"></div>
-                </div>
-                <div>{{'document.plugin.pki' | translate }}</div></div>
-              </a>
-            </button>
-          </div>
+          </div> -->
         </div>
 
-        <div ngbDropdown class="d-inline-block">
-          <div class="social-icons" ngbDropdownToggle>
-            <span class="user_login"></span>
-            <div class="label">{{nameCurrentUser}}</div>
-          </div>
 
-          <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu" style="cursor: pointer">
-            <a ngbDropdownItem class="drop" (click)="infoUserDetail()" [routerLink]="['/main/user-infor']">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_user_detail"></div>
-                </div>
-                <div>{{'user.information' | translate }}</div>
-              </div>
-            </a>
-
-            <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop" (click)="resetPassword()">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_password"></div>
-                </div>
-                <div>{{'login.reset_password_new' | translate }}
-                  <a href="https://auth-sso.mobifone.vn/vn/profile-information" ></a
-                >
-                </div>
-              </div>
-            </button>
-
-            <!-- <button *ngIf="!checkMailMbf()" ngbDropdownItem class="drop">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_password"></div>
-                </div>
-                <div>
-                  <a href="https://auth-sso.mobifone.vn/vn/profile-information" 
-                  >{{'login.reset_password_new' | translate }}</a>
-                </div>
-              </div>
-            </button> -->
-
-            <button ngbDropdownItem class="drop_red" routerLink="/login" (click)="logout()">
-              <div style="display: flex; align-items: center;">
-                <div class="db_user">
-                  <div class="db_log_out"></div>
-                </div>
-                <div>{{'logout' | translate }}</div>
-              </div>
-            </button>
-          </div>
-        </div>
       </div>
     </header>
 
