--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -92,23 +92,23 @@ header {
   background-image: url(../../assets/img/notification_login.svg);
 }
 .social-icons .user_login {
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/user_login.svg);
+  background-image: url(../../assets/img/user_dashboard.svg);
   //border-radius: 50%;
 }
 .social-icons .document {
   height: 20px;
-  width: 18px;
+  width: 20px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/icon_document.svg);
+  background-image: url(../../assets/img/Variant2.svg);
   //border-radius: 50%;
 }
 .social-icons .label{
-  color: #106DB6;
+  color: #0041C4;
   margin-left: 10px;
 }
 
