--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -107,6 +107,7 @@
             (contractNoValue)="contractNoValueChange($event)" 
             [contractNoValue]="contractNoValue"
             [contractNoValueSign]="contractNoValueSign"
+            [otpValueSign]="otpValueSign"
             (checkedChange)="switchesValueChange($event)" 
             *ngIf="![2,3].includes(recipient.status)" 
             [datas]="datas" [view]="[2,3].includes(recipient.status)" 
@@ -115,7 +116,7 @@
           >
           </app-image-sign-contract>
           <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
-          <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
+          <div *ngIf="d.sign_unit != 'text' && !this.flagFocus && !this.otpValueSign" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
         </div>
       </div>
       <div class="skeleton-sign position-absolute opacity-0">
