--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -1,5 +1,5 @@
 <div id="image-sign-contract-component" *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
-  <div class="skeleton-sign" (click)="doSign()" *ngIf="!checkShowEdit && !sign.valueSign">
+  <div class="skeleton-sign" (click)="doSign()" *ngIf="(!checkShowEdit && !sign.valueSign) && !otpValueSign">
     <div class="stamp-content">
       <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
         alt="mobifone.contract">
@@ -11,12 +11,12 @@
     </div>
   </div>
 
-  <div class="skeleton-sign" (click)="doSign()" *ngIf="checkShowEdit && !sign.valueSign">
+  <div class="skeleton-sign" (click)="doSign()" *ngIf="checkShowEdit && !sign.valueSign && !otpValueSign">
     <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
   </div>
 
-  <div *ngIf="sign.valueSign" (click)="doSign()">
-    <img [src]="sign.valueSign" alt="mobifone.contract" style="width: auto" [width]="sign.width ? sign.width : '100px'" [height]="sign.height ? sign.height : '54px'">
+  <div *ngIf="otpValueSign || countOtpBox > 0" (click)="doSign()">
+    <img [src]="otpValueSign" alt="mobifone.contract" style="width: auto" [width]="sign.width ? sign.width : '100px'" [height]="sign.height ? sign.height : '54px'">
   </div>
 </div>
 
