--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -30,7 +30,7 @@
               (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px"
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationReviewer().length == 1">
+              [disabled]="getOriganzationReviewer().length == 1 && !isEditOrdering">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
               <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
@@ -257,7 +257,7 @@
               (focusout)="onChangeValue($event,'ordering-sign-' + index)" style="width: 25px; height: 25px"
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationSignature().length == 1">
+              [disabled]="getOriganzationSignature().length == 1 && !isEditOrdering">
 
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
@@ -557,7 +557,7 @@
           <div class="participants--content" *ngFor="let d of getOriganzationDocument(); let index = index">
             <input [id]="'ordering-doc-' + index" class="col-md-1 contract-total"
               (focusout)="onChangeValue($event, 'ordering-doc-' + index)" style="width: 25px; height: 25px"
-              type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1"
+              type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1 && !isEditOrdering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
@@ -874,7 +874,7 @@
             <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
               <input [id]="'ordering-view-' + index" class="col-md-1 contract-total"
                 (focusout)="onChangeValue($event,'ordering-view-' + index)" style="width: 25px; height: 25px"
-                type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1"
+                type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1 && !isEditOrdering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column; margin-bottom: 14px">
@@ -1080,7 +1080,7 @@
                 (focusout)="onChangeValue($event,'ordering-sign-partner-' + index)" class="col-md-1 contract-total"
                 style="width: 25px; height: 25px" type="number" [(ngModel)]="d.ordering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                [disabled]="getPartnerSignature(item).length == 1 ">
+                [disabled]="getPartnerSignature(item).length == 1 && !isEditOrdering">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                 <!--Chọn {{'typeOfSignEmail' | translate}} hoặc {{'user.phone' | translate}}-->
@@ -1359,7 +1359,7 @@
                 (focusout)="onChangeValue($event, 'ordering-partner-doc-' + index)" class="col-md-1 contract-total"
                 style="width: 25px; height: 25px" type="number" [(ngModel)]="d.ordering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                [disabled]="getPartnerDocument(item).length == 1">
+                [disabled]="getPartnerDocument(item).length == 1 && !isEditOrdering">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                 <div class="participants--input" style="display: flex">
