[Update - Step2 Mẫu HĐ] Cho phép sửa order của người tham gia với 2 tổ chức có cùng order

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -31,7 +31,7 @@
               (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px"
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationReviewer().length == 1">
+              [disabled]="getOriganzationReviewer().length == 1 && !isEditOrdering">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
               <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
@@ -255,7 +255,7 @@
               (focusout)="onChangeValue($event,'ordering-sign-' + index)" style="width: 25px; height: 25px"
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationSignature().length == 1">
+              [disabled]="getOriganzationSignature().length == 1 && !isEditOrdering">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
               <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi ký to chuc-->
@@ -544,7 +544,7 @@
           <div class="participants--content" *ngFor="let d of getOriganzationDocument(); let index = index">
             <input [id]="'ordering-doc-' + index" class="col-md-1 contract-total"
               (focusout)="onChangeValue($event, 'ordering-doc-' + index)" style="width: 25px; height: 25px"
-              type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1"
+              type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1 && !isEditOrdering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
@@ -826,7 +826,7 @@
 
               <input [id]="'ordering-view-' + index" class="col-md-1 contract-total"
                 (focusout)="onChangeValue($event,'ordering-view-' + index)" style="width: 25px; height: 25px"
-                type="number" [(ngModel)]="d.ordering" disabled
+                type="number" [(ngModel)]="d.ordering" [disabled]="!isEditOrdering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
@@ -992,7 +992,7 @@
                 (focusout)="onChangeValue($event,'ordering-sign-partner-' + index)" class="col-md-1 contract-total"
                 style="width: 25px; height: 25px" type="number" [(ngModel)]="d.ordering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                [disabled]="getPartnerSignature(item).length == 1">
+                [disabled]="getPartnerSignature(item).length == 1 && !isEditOrdering">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi ky to chuc-->
@@ -1153,6 +1153,7 @@
             </div>
           </div>
 
+          <!-- Văn thư -->
           <div class="participants-border">
             <div class="label">{{'user.doc' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerDocument(item); let index = index">
@@ -1160,7 +1161,7 @@
                 (focusout)="onChangeValue($event, 'ordering-partner-doc-' + index)" class="col-md-1 contract-total"
                 style="width: 25px; height: 25px" type="number" [(ngModel)]="d.ordering"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                [disabled]="getPartnerDocument(item).length == 1">
+                [disabled]="getPartnerDocument(item).length == 1 && !isEditOrdering">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
