[Update - Màn ký HĐ] Sửa/thêm chức năng tìm ô ký/ô thông tin

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -217,6 +217,7 @@
   [idElement]="idElement" 
   [coordinateY]="coordinateY" 
   [confirmSignature]="confirmSignature" 
+  [signBoxData]="signBoxData"
   [datas]="datas" 
   [view]="[2,3].includes(recipient.status)" 
   [recipientId]="recipientId" 
