--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -10,6 +10,26 @@
   margin: 5px 5px;
 }
 
+.find-sign-box-btn {
+  width: fit-content;
+  height: 30px;
+  border-radius: 7px;
+  border: 1px solid #EE7200;
+  color: #EE7200;
+  background-color: #FFFFFF;
+  margin: 5px 5px;
+}
+
+.find-infor-box-btn {
+  width: fit-content;
+  height: 30px;
+  border-radius: 7px;
+  border: 1px solid #2674B0;
+  color: #2674B0;
+  background-color: #FFFFFF;
+  margin: 5px 5px;
+}
+
 .footer-contract {
   border-top: 1px solid #ddd;
   display: flex;
